--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,4 +6,4 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/bold-listener-320807/hello']
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['run', 'deploy', 'my-cloudrun-service', '--image', 'gcr.io/bold-listener-320807/hello', '--platform', 'managed' '--region=us-east1'
+    args: ['run', 'deploy', 'my-cloudrun-service', '--image', 'gcr.io/bold-listener-320807/hello', '--platform', 'managed']
